[package]
name = "rand_ckad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.12"
anyhow = "1.0.66"
termimad = "0.20.3"
rand = "0.8.5"

[dependencies.clap]
version = "4.0.18"
features = ["derive"]

[dependencies.tokio]
version = "1.21.2"
features = ["full"]